# network-katharizer

./: LICENSE.md  README.md  gitignore  pyproject.toml  requirements.txt  serviceLatency.py
NetworkKatharizer/: TedLab.py  TedLink.py  TedMachine.py
images/DockerImage/: Dockerfile
images/LightImage/: Dockerfile  pingingScript-v2.sh  pingingScript.sh
input/: paper2_large_00.csv  paper2_large_00_MANETOptiServ_fairness.csv  paper2_large_00_MANETOptiServ_globalLatency.csv  paper2_large_01_MANETOptiServ_fairness.csv  paper2_large_01_MANETOptiServ_globalLatency.csv  paper2_small_00.csv  paper2_small_00_MANETOptiServ_fairness.csv  paper2_small_00_MANETOptiServ_globalLatency.csv  paper2_small_01.csv  paper2_small_01_MANETOptiServ_fairness.csv  paper2_small_01_MANETOptiServ_globalLatency.csv  paper2_small_02.csv  paper2_small_02_MANETOptiServ_fairness.csv  paper2_small_02_MANETOptiServ_globalLatency.csv  paper2_veryLarge_01.csv  paper2_veryLarge_01_MANETOptiServ_fairness.csv  paper2_veryLarge_01_MANETOptiServ_globalLatency.csv  plasenzuela_MANETOptiServ_fairness.csv
output/paper2_large_00_0/shared/: host_d0_1  host_d0_3  host_d10_0  host_d11_0  host_d12_0  host_d13_0  host_d13_2  host_d13_3  host_d14_2  host_d14_3  host_d15_0  host_d15_2  host_d15_3  host_d16_0  host_d16_2  host_d16_3  host_d17_2  host_d17_3  host_d18_2  host_d18_3  host_d19_0  host_d1_1  host_d1_3  host_d20_0  host_d21_0  host_d22_0  host_d23_0  host_d23_2  host_d23_3  host_d24_0  host_d24_2  host_d24_3  host_d25_0  host_d25_2  host_d25_3  host_d26_2  host_d26_3  host_d27_2  host_d27_3  host_d28_2  (+79 more)
(+8590 files in other folders)
